--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "dependencies": {
     "next": "^10.0.0",
     "react": "16.13.1",
+    "react-aria": "^3.2.0",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.10",
+    "@types/react": "^17.0.0",
+    "typescript": "^4.1.2"
   }
 }
