--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "^10.0.0",
     "react": "16.13.1",
     "react-aria": "^3.2.0",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-stately": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
